--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </div> <!-- end page -->
 
 <script type="text/javascript">
-    var Vis1 = "js/room1.vg.json";
+    var specVis1 = "js/room1.vg.json";
     var specVis2 = "js/room2.vg.json";
     var specVis3 = "js/room3.vg.json";
 
