--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>House price in MELBOURNE</title>
+    <title>House in MELBOURNE</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +22,8 @@
 
 <div class="page">
 
+    <h1 id="c-align"> Melbourne housing situation analysis </h1>
+
     <div class="pure-g">
         <div class="pure-u-1-1">
             <div id="vis1"  class="vis-container"></div>
@@ -29,19 +31,22 @@
         <p>In this map, the color of red from light to dark shows the housing prices in various parts of Melbourne.</p>
     </div>
 
+    
+
     <div class="pure-g">
         <div class="pure-u-1-1">
-            <div id="vis2"  class="vis-container"></div>
+            <div id="vis3"  class="vis-container"></div>
         </div>
         <p>According to this bar chart, we can see that Boroondara City Council is the highest housing price area in Melbourne with an average of $1642149.37077, and the lowest is Moorabool Shire Council ($486090.909091). In addition to Boroondara, there are two areas where the average house price is higher than 1.4 million. Stonnington and Bayside also have as high as AUD 1,574,150.94381 and AUD 1,467,352.49379.</p>
     </div>
 
     <div class="pure-g">
         <div class="pure-u-1-1">
-            <div id="vis3"  class="vis-container"></div>
+            <div id="vis2"  class="vis-container"></div>
         </div>
         <p>It can be seen from this pie chart,people are more inclined to buy a house by owning three rooms (83850), which accounts for 42.7% of the total. The next popular one is a house with four rooms with the data 62980.</p>
     </div>
+        
 
 </div> 
 
